<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".MainActivity">

    <Button
        style="@style/MainActivityButtons"
        android:text="@string/create_contact_label"
        android:id="@+id/create_btn"/>

    <Button
        style="@style/MainActivityButtons"
        android:text="@string/edit_contact_label"
        android:id="@+id/edit_btn"/>
    <Button
        style="@style/MainActivityButtons"
        android:text="@string/delete_contact_label"
        android:id="@+id/delete_btn"/>

    <Button
        style="@style/MainActivityButtons"
        android:text="@string/display_contact_label"
        android:id="@+id/display_btn"/>

    <Button
        style="@style/MainActivityButtons"
        android:text="@string/finish_label"
        android:id="@+id/finish_btn"/>

</LinearLayout>
