<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.example.contactsapp.CreateContactActivity">
    <EditText
        style="@style/CreateEditTextViews"
        android:hint="@string/name_edit_text_placeholder"
        android:id="@+id/name_text_view"
        android:layout_marginTop="0dp"/>

    <EditText
        style="@style/CreateEditTextViews"
        android:hint="@string/phone_edit_text_placeholder"
        android:id="@+id/phone_text_view"
        android:layout_below="@id/name_text_view"/>

    <EditText
        style="@style/CreateEditTextViews"
        android:hint="@string/email_edit_text_placeholder"
        android:id="@+id/email_text_view"
        android:layout_below="@id/phone_text_view"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gallery_button"
        android:layout_marginTop="30dp"
        android:layout_below="@id/email_text_view"
        android:layout_centerHorizontal="true"
        android:src="@drawable/avatar_blank"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Save"
        android:id="@+id/save_contact_activity"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_contact_activity"
        android:id="@+id/cancel_contact_activity"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"/>

</RelativeLayout>
