<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.example.contactsapp.EditContactActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_contact_label"
        android:id="@+id/edit_contact_activity"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:clickable="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="Name"
        android:ems="10"
        android:id="@+id/edit_contact_name"
        android:layout_below="@+id/edit_contact_activity"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/edit_contact_activity"
        android:layout_alignEnd="@+id/edit_contact_activity" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/edit_contact_phone"
        android:layout_below="@+id/edit_contact_name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/edit_contact_name"
        android:layout_alignEnd="@+id/edit_contact_name"
        android:hint="@string/phone_hint" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/edit_contact_email"
        android:layout_below="@+id/edit_contact_phone"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/edit_contact_phone"
        android:layout_alignEnd="@+id/edit_contact_phone"
        android:hint="@string/email_hint" />

    <ImageView
        android:layout_width="245dp"
        android:layout_height="135dp"
        android:id="@+id/edit_content_avatar"
        android:layout_below="@+id/edit_contact_email"
        android:layout_marginTop="10dp" />

</RelativeLayout>
