<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.example.contactsapp.DeleteContactActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Select_Contact"
        android:id="@+id/SelectContactBtn"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/Name_field"
        android:layout_below="@+id/SelectContactBtn"
        android:layout_centerHorizontal="true"
        android:hint="Name"
        android:clickable="false"
        android:linksClickable="false"
        android:focusable="false"
        android:focusableInTouchMode="false"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/Phone_field"
        android:layout_below="@+id/Name_field"
        android:layout_centerHorizontal="true"
        android:hint="Phone Number"
        android:clickable="false"
        android:linksClickable="false"
        android:focusable="false"
        android:focusableInTouchMode="false"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/Email_field"
        android:layout_below="@+id/Phone_field"
        android:layout_centerHorizontal="true"
        android:hint="Email"
        android:clickable="false"
        android:linksClickable="false"
        android:focusable="false"
        android:focusableInTouchMode="false"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:layout_below="@+id/Email_field"
        android:layout_centerHorizontal="true"
        android:src="@drawable/avatar_blank"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Delete_Contact"
        android:id="@+id/DeleteContactBtn"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="52dp"
        android:layout_marginStart="52dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Cancel_Button"
        android:id="@+id/CancelBtn"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/Email_field"
        android:layout_alignEnd="@+id/Email_field"
        android:layout_marginRight="52dp"
        android:layout_marginEnd="52dp" />
</RelativeLayout>
